<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="8dp"
    android:background="@color/brighterColorAroundPopups"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOfPopups"
        android:hint="@string/email_please"
        android:inputType="textEmailAddress"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOfPopups"
        android:hint="@string/name_please"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" />


    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorOfPopups"
        android:hint="@string/number_please"
        android:inputType="number"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_go"/>

    <Button
        android:id="@+id/stop_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_it"/>

    <Button
        android:id="@+id/delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete All" />




</LinearLayout>